2007-06-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/search-dialog.glade:
	* data/ui.xml:
	* gaupol/agents/search.py:
	* gaupol/finder.py:
	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/search.py:
	* gaupol/gtk/agents/util.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/parser.py:
	Add contracts and clean up code.

2007-06-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/menu.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/agents/util.py:
	* gaupol/gtk/application.py:
	Add contracts and clean up code.

2007-06-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/conf.spec:
	* gaupol/gtk/dialogs/file/open.py:
	* gaupol/gtk/dialogs/file/video.py:
	Do not save open_dialog.size since it doesn't work.

2007-06-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/preview.py:
	Clean up code.

2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/format.py:
	* gaupol/gtk/agents/__init__.py:
	Clean up code.

2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/conf.spec:
	* data/glade/header-dialog.glade:
	* data/glade/insert-dialog.glade:
	* data/glade/preferences-dialog.glade:
	* gaupol/base/mutables.py:
	* gaupol/const.py:
	* gaupol/gtk/actions/edit.py:
	* gaupol/gtk/actions/format.py:
	* gaupol/gtk/agents/edit.py:
	* gaupol/gtk/agents/__init__.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/dialogs/header.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/insert.py:
	* gaupol/gtk/page.py:
	* gaupol/gtk/util.py:
	* gaupol/gtk/view.py:
	* gaupol/languages.py:
	* gaupol/unittest/case.py:
	Add contracts and clean up code.

2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/close.py (close_page):
	Call self.update_gui.

2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (_try_open_file):
	Actually return None on UnicodeError.

2007-06-15  Osmo Salomaa  <otsaloma@cc.hut.fi>