@@ -1,3 +1,9 @@
+2007-06-19  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/liner.py (_split_on_clauses):
+	Check for a variance (actually std/mean) too great in line lengths if
+	text contains three or more lines.
+
 2007-06-17  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* data/glade/search-dialog.glade:
